Added embed link for the font family

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Frontend Mentor | Huddle landing page with curved sections</title>
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="fonts/css/all.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 
