--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             </li>
             <li>
               <a href="#">
-                <i class="fab fa-instagram"></i>
+                <i class="fas fa-instagram"></i>
               </a>
             </li>
           </ul>
