--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <nav>
       <div class="container">
         <div class="flex">
-          <img src="images/logo.svg" alt="logo">
+          <div class="logo">
+            <img src="images/logo.svg" alt="logo">
+          </div>
           <button class="cta">Try it free</button>
         </div>
       </div>
