--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <nav>
       <div class="container">
         <div class="flex">
-          <div class="logo">
-            <img src="images/logo.svg" alt="logo">
+          <div>
+            <img class="logo" src="images/logo.svg" alt="logo">
           </div>
           <button class="cta">Try it free</button>
         </div>
@@ -99,7 +99,7 @@
       <div class="flex align-start flex-reverse">
         <div>
           <ul>
-            <li><img src="images/logo-white.svg" alt=""></li>
+            <li><img class="logo" src="images/logo-white.svg" alt=""></li>
             <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia vestibulum
               a, ultrices quis sem.</li>
             <li>
